--- a/app/src/main/res/layout/fragment_current_design.xml
+++ b/app/src/main/res/layout/fragment_current_design.xml
@@ -9,7 +9,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.design.CurrentDesign">
+    tools:context=".ui.weather_details.CurrentDesign">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
