--- a/app/src/main/res/layout/item_weather_hour_of_day.xml
+++ b/app/src/main/res/layout/item_weather_hour_of_day.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.design.CurrentDesign"
+    tools:context=".ui.weather_details.CurrentDesign"
         android:id="@+id/rootView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
